# cosmopharm

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  basic_usage.py  example_usage.py  requirements.txt  setup.cfg  setup.py
data/lle/calculated/: lle_results.xlsx  ucst_values.xlsx
data/sle/: README.md  table_params.xlsx
data/sle/calculated/: sle_results_PVA_alternatives.xlsx  sle_results_PVP_alternatives.xlsx  sle_results_REF.xlsx
data/sle/calculated/statistics/REF/: calc_vs_exp.xlsx  (+3 more)
docs/: README_pypi.md
profiles/: Gaussian_input_cosmo.gjf  Gaussian_input_optimization.gjf
profiles/_import_methods/DirectImport/: README.md  import_profiles.py
profiles/_import_methods/DirectImport/src/: pybind11_interface.cxx
profiles/_import_methods/UD/: complist.txt  complist.xlsx  xlsx_to_txt.py
profiles/_import_methods/UD/sigma3/: CBZ.sigma  GSF.sigma  IBP.sigma  IMC.sigma  NIF.sigma  NPX.sigma  PCM.sigma  PLGA75.sigma  PVPK12.sigma  PVPK25.sigma  RBV.sigma  TBA.sigma  VST.sigma
profiles/polymers/: to_sigma_poly.py
profiles/polymers/cosmo/: EUD_st-4mer.cosmo  PDL_st-3mer.cosmo  PLGA_st-4mer.cosmo  PVA_at-3mer.cosmo  PVA_at-5mer-mmrr.cosmo  PVA_at-5mer-rmrm.cosmo  PVA_at-5mer-wo1OH.cosmo  PVA_it-3mer.cosmo  PVA_st-3mer.cosmo  PVPVAc_st-4mer.cosmo  PVP_it-3mer.cosmo  PVP_st-3mer.cosmo  PVP_st-5mer.cosmo
profiles/polymers/sigma/: EUD.sigma  PDL.sigma  PVA.sigma  PVPK30.sigma  PVPVAc64.sigma
profiles/polymers/xyz/: EUD_st-4mer.xyz  PDL_st-3mer.xyz  PLGA_st-4mer.xyz  PVA_at-3mer.xyz  PVA_at-5mer-mmrr.xyz  PVA_at-5mer-rmrm.xyz  PVA_at-5mer-wo1OH.xyz  PVA_it-3mer.xyz  PVA_st-3mer.xyz  PVPK12_st-mol1.xyz  PVPK12_st-mol2.xyz  PVPK12_st-mol3.xyz  PVPVAc_st-4mer.xyz  PVP_it-3mer.xyz  PVP_st-3mer.xyz  PVP_st-5mer.xyz
src/: install_cosmosac.md
src/cosmopharm/: __init__.py  components.py
src/cosmopharm/actmodels/: __init__.py  actmodel.py  cosmo.py
src/cosmopharm/equilibrium/: __init__.py  lle.py  sle.py
src/cosmopharm/utils/: __init__.py  convert.py  helpers.py  lle_scanner.py  spacing.py
(+22 files in other folders)
