[metadata]
name = cosmopharm
version = 0.0.26
author = Ivan Antolovic
author_email = Ivan.Antolovic@tu-berlin.de
maintainer = Martin Klajmon
maintainer_email = Martin.Klajmon@vscht.cz
description = Predictive modeling for drug-polymer compatibility in pharmaceutical formulations using COSMO-SAC.

# Markdown Configuration
#long_description = file: README.md
#long_description_content_type = text/markdown

# reStructuredText Configuration
#long_description = file: README.rst
#long_description_content_type = text/x-rst

keywords = Drug-Polymer Compatibility, Amorphous Solid Dispersions, Pharmaceutical Formulation, COSMO-SAC Model, Solubility Prediction, Miscibility Analysis, Phase Behavior Prediction, Pharmaceutical Sciences, Drug Formulation Research, Polymer Science, Predictive Modeling in Pharma, Drug Development Tools, Biopharmaceuticals
url = https://github.com/ivanantolo/cosmopharm,
license = MIT
license_file = LICENSE
#platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
	Intended Audience :: Healthcare Industry
	Intended Audience :: Developers
	Intended Audience :: Education
    License :: OSI Approved :: MIT License
	Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13

[options]
packages = find:
install_requires =
    numpy >= 1.15
    pandas >= 1.0
    scipy >= 1.4
    openpyxl >= 3.0
python_requires = >=3.8
package_dir =
    = src

[options.extras_require]
examples =
    matplotlib >= 3.0